--- a/GuessMyNationality/appsettings.json
+++ b/GuessMyNationality/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "GuessMyNationalityConnectionString": "Data Source=.\\MSSQLSERVER2019;Initial Catalog=GuessMyNationalityDb;User Id=GuessMyNationalityDbUser; Password=A%jhz3453I6*1p"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
