--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,7 @@ ClientBin/
 *.jfm
 *.pfx
 *.publishsettings
+appsetting.json
 orleans.codegen.cs
 
 # Including strong name files can present a security risk
