--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 appsetting.json
+Migrations/
 orleans.codegen.cs
 
 # Including strong name files can present a security risk
